--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["setuptools>=61"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "41ai"
+name = "forty_one"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,3 +11,9 @@ requires-python = ">=3.13"
 dependencies = [
     "pre-commit>=4.3.0",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
